2018-02-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSAttributedString.m: remove a little dead code
	* Tests/base/NSMutableAttributedString/test00.m: add sanity checks
	* Tests/base/NSMutableAttributedString/test01.m: add sanity checks
	* Source/GSString.m: raise exception on character conversion failure

2018-02-07  Yavor Doganov  <yavor@gnu.org>

	* Source/NSPortMessage.m (sendBeforeDate:): Invoke
	-sendBeforeDate:msgid:components:from:reserved: so that the value
	of _msgid is taken into account.
	(initWithSendPort:receivePort:components:): Set _msgid to 0.

2018-02-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSException.h:
	* Source/NSAssertionHandler.m:
	* Documentation/manual/ExceptionHandling.texi:
	Update NSAssert() and NSCAssert() to handle variable arguments
	(as OSX has done) and mark the numbered macros as obsolete.
	* Source/NSMessagePort.m:
	* Source/NSSocketPort.m: Log if we fail to turn on keepalive
	* Source/NSURL.m: fix possible nul pointer dereference
	* Source/NSPropertyList.m: check step before use
	* Source/NSDate.m: add comment that we are ignoring non-digits
	* Source/NSCache.m: use double division for calcualting averrage
	* Source/NSPredicate.m: check for termination of quoted strings

2018-02-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPortCoder.m: Remove redundant (always true) conditional.
	Use cast to mask 64bit values.
	* Source/NSUnarchiver.m: Remove redundant (always true) conditional.
	* Source/NSPropertyList.m: Remove dead code
	* Source/NSDecimal.m: Remove dead code, tweak underflow settig for
	negated numbbers.
	* Tools/gdnc.m: Remove dead code

2018-02-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m: keep checker happy by usingn return value of
	setsockopt.
	* Source/Additions/Unicode.m: ensure iconv handle is closed
	* Source/NSLocale.m: localeIdentifierFromComponents should cope with
	collation alone beng set.